Ultimas modificaciones al codigo de las reseñas

--- a/product.html
+++ b/product.html
@@ -156,7 +156,7 @@
           <h2>Calificación del Producto</h2>
 
           <!-- Sección de calificación -->
-          <div class="rating" id="productRating">
+          <div class="rating" id="productRating" style="color: blueviolet;">
             <i class="far fa-star" data-rating="5"></i>
             <i class="far fa-star" data-rating="4"></i>
             <i class="far fa-star" data-rating="3"></i>
