--- a/Backend.html
+++ b/Backend.html
@@ -12,8 +12,11 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         nav {
+            flex-shrink: 0; /* Evita que el nav se contraiga más allá de su contenido */
             width: 200px;
             background-color: #333;
             color: #fff;
@@ -23,15 +26,16 @@
             flex-direction: column;
             gap: 10px;
         }
-        nav a {
+        nav a, #logoutBtn {
             text-decoration: none;
             padding: 10px;
             border-radius: 5px;
             transition: background-color 0.3s;
             color: #fff;
             cursor: pointer;
+            text-align: center;
         }
-        nav a:hover {
+        nav a:hover, #logoutBtn:hover {
             background-color: #555;
         }
         #contenido {
@@ -40,7 +44,7 @@
         }
         iframe {
             width: 100%;
-            height: 600px;
+            height: 100%;
             border: none;
         }
         #logoutBtn {
@@ -54,6 +58,15 @@
         }
         #logoutBtn:hover {
             background-color: #c9302c;
+        }
+
+        @media (min-width: 768px) {
+            body {
+                flex-direction: row;
+            }
+            #contenido {
+                padding: 20px;
+            }
         }
     </style>
 </head>
