--- a/CRUDP.html
+++ b/CRUDP.html
@@ -47,6 +47,7 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
+      width: 100%;
     }
 
     button:hover {
@@ -90,11 +91,8 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
-    }
-
-    button.editar:hover,
-    button.eliminar:hover {
-      background-color: #005d7a;
+      display: block;
+      margin: 5px auto;
     }
 
     /* Media queries para pantallas más pequeñas */
@@ -106,11 +104,15 @@
       input,
       textarea,
       select {
-        width: calc(100% - 16px);
+        width: 100%;
       }
 
       button {
         width: 100%;
+      }
+
+      th, td {
+        font-size: 14px;
       }
     }
   </style>
