--- a/index.html
+++ b/index.html
@@ -297,8 +297,14 @@
                             </ul>
                         </li>
 
+                        <!-- Carrito -->
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
+                        </li>
+
+                        <!-- Lista de deseos -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="wishlist.html">Lista de deseos</a>
                         </li>
 
                     </ul>
