--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/Fisestoplogo.png">
-    <title>FiesTop | Donde las fiestas cobran vida</title>
     <meta name="description"
         content="En FiesTop puedes organizar desde una fiesta de cumpleaños hasta una fiesta de VX años el límite es tu imaginacion puesto que aquí encontraras todo lo que necesitas.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -99,10 +98,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/Fisestoplogo.png" height="40px" alt="Logo oficial de FiesTop"
-                        title="Logo oficial de FiesTop">
-                </a>
+                <a class="navbar-brand" href="index.html"><img src="img/Fisestoplogo.png" height="40px"
+                        alt="Logo oficial de FiesTop" title="Logo oficial de FiesTop"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -114,12 +111,12 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Catalogo.html">Todos los productos</a>
+                            <a class="nav-link" href="#">Todos los productos</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Categorías
+                                Categorias
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Servicios</a></li>
@@ -133,18 +130,14 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Quiénes somos
+                                Quienes somos:
                             </a>
                             <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item">FiesTop es una empresa centrada en la organización de
-                                        eventos sociales
-                                        <br> de cualquier índole desde fiestas de cumpleaños hasta fiestas de XV años y
-                                        bodas
-                                        <br> el límite es su imaginación, nosotros le daremos las herramientas
-                                        necesarias
-                                        <br> para que organice su fiesta ideal en tiempo y forma</a>
-                                </li>
+                                <li><a class="dropdown-item">FiesTop es una empresa centrada en la organizacion de
+                                        eventos sociales <br> de cualquier indole desde fiestas de cumpleaños hasta
+                                        fiestas de XV años y bodas <br> el limite es su imaginación, nosotros le daremos
+                                        las herramientas necesarias <br> para que organice su fiesta ideal en tiempo y
+                                        forma</a></li>
                                 <li><a class="dropdown-item" href="#"></a></li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -153,26 +146,34 @@
                             </ul>
                         </li>
 
+                        <!-- Carrito -->
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
                         </li>
 
+                        <!-- Lista de deseos -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="wishlist.html">Lista de deseos</a>
+                        </li>
+
                     </ul>
-                    <form class="d-flex" action="resultados.html" method="GET">
-                        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search"
-                            name="query">
+
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
-
+                    <!-- Sección de inicio de sesión -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="Login.html">Iniciar sesión</a>
+                            <a class="nav-link" href="#">Iniciar sesión</a>
                         </li>
                     </ul>
 
-                    <a class="navbar-brand" href="PerfilU.html">
+                    <!-- Sección para ver el perfil del usuario (puedes ajustar el enlace según tus necesidades) -->
+                    <a class="navbar-brand" href="#">
                         <img src="img/LogoU.png" height="40px" alt="Logo oficial de FiesTop" title="Perfil de usuario">
                     </a>
+
                 </div>
             </div>
         </nav>
