--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Todos los productos</a>
+                            <a class="nav-link" href="Catalogo.html">Todos los productos</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
