--- a/Catalogo.html
+++ b/Catalogo.html
@@ -206,7 +206,7 @@
                     <div class="card-body">
                         <h3 class="card-title">${product.nombre}</h3>
                         <p class="card-text">Precio: $${product.precio.toFixed(2)}</p>
-                        <p class="card-text">${product.descripcion}</p>
+                        <p class="card-text">${product.descripcion_corta}</p>
                         <div class="buttons">
                             <button class="btn btn-primary" onclick="buyProduct('${product.nombre}')">Comprar</button>
                             <button class="btn btn-secondary" onclick="viewProduct('${product.nombre}')">Ver artículo</button>
