Solucion de catalogo y actualizacion de banner

--- a/Catalogo.html
+++ b/Catalogo.html
@@ -249,7 +249,7 @@
                     <img src="${product.imagen}" alt="${product.nombre}">
                     <h3>${product.nombre}</h3>
                     <p>Precio: $${product.precio.toFixed(2)}</p>
-                    <p>${product.descripcion}</p>
+                    <p>${product.descripcion_corta}</p>
                     <div class="buttons">
                         <button onclick="buyProduct('${product.nombre}')">Comprar</button>
                         <button onclick="viewProduct('${product.nombre}')">Ver artículo</button>
