--- a/Login.html
+++ b/Login.html
@@ -89,6 +89,7 @@
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                 required="">
                         </div>
+                        <div id="mensaje-error"></div>
                         <button type="submit"
                             class="text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Iniciar
                             sesión</button>
@@ -113,30 +114,27 @@
             var passwordInput = document.getElementById('password').value;
 
             // Leer el archivo JSON de usuarios
-            fetch('admins.json')
+            fetch('usuarios.json')
                 .then(response => response.json())
-                .then(users => {
-                    // Verificar las credenciales
-                    var isValid = users.some(user => user.email === emailInput && user.password === passwordInput);
+                .then(data => {
+                    var usuario = data.find(u => u.email === emailInput && u.contrasena === passwordInput);
 
-                    if (isValid) {
+                    if (usuario) {
                         // Mostrar el mensaje de éxito
                         alert('Credenciales correctas. Por favor, disfrute su estadia.');
-
 
                         // Redirigir a la página del perfil del usuario después de 2 segundos
                         setTimeout(function () {
                             window.location.href = 'PerfilU.html';
                         }, 1000);
                     } else {
-                        // Limpiar el mensaje de éxito y mostrar un mensaje de error
-                        document.getElementById('successMessage').classList.add('hidden');
-                        alert('Credenciales incorrectas. Por favor, inténtalo de nuevo.');
+                        var mensajeError = document.getElementById("mensaje-error");
+                        mensajeError.innerHTML = '<p class="mt-2 text-pink-600 text-sm">Credenciales incorrectas. Por favor, intenta de nuevo.</p>';
+                        console.error('Credenciales incorrectas. Por favor, inténtalo de nuevo.');
                     }
                 })
                 .catch(error => console.error('Error al leer el archivo JSON:', error));
         })
     </script>
 </body>
-
 </html>
