--- a/Admin.html
+++ b/Admin.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-            darkMode: "class",
+            darkMode: "media",
             theme: {
                 extend: {
                     colors: {
