--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Todos los productos</a>
+                            <a class="nav-link" href="Catalogo.html">Todos los productos</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -340,7 +340,7 @@
                     </ul>
 
                     <!-- Sección para ver el perfil del usuario (puedes ajustar el enlace según tus necesidades) -->
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="Login.html">
                         <img src="img/LogoU.png" height="40px" alt="Logo oficial de FiesTop" title="Perfil de usuario">
                     </a>
 
