--- a/wishlist.html
+++ b/wishlist.html
@@ -286,6 +286,14 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
+    <footer>
+        <p style="text-align: center;">&copy; 2023 Mi Tienda en Línea <a
+                href="https://www.facebook.com/people/FiesTop/100092594490737/"><img src="img/fb.png"
+                    class="card-img-top" alt="Plataforma oficial de fiestop en facebook" title="logo de Facebook"
+                    style="width: 30px;"></a> </p>
+
+    </footer>
+
 </body>
 
 </html>
