--- a/Catalogo.html
+++ b/Catalogo.html
@@ -9,6 +9,20 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Catálogo de Productos</title>
     <style>
+        .navbar {
+            position: fixed;
+            width: 100%;
+            z-index: 1000000;
+            top: 0;
+        }
+
+        .container {
+            text-align: center;
+            width: 100%;
+            z-index: 1000000;
+            margin-top: 6%;
+        }
+
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f9f9f9;
@@ -53,34 +67,110 @@
             background-color: #45a049;
         }
 
-        #product-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
+        #productos-container {
+            text-align: center;
         }
 
-        .product {
-            flex: 0 0 calc(30% - 20px); /* Establece el ancho deseado con márgenes */
+        .card {
             border: 1px solid #ccc;
             border-radius: 8px;
-            padding: 10px;
-            margin: 10px;
+            overflow: hidden;
+            width: 30%;
+            height: 80%;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            text-align: center;
+            display: inline-block;
             box-sizing: border-box;
-            background-color: #fff;
-            transition: transform 0.3s ease-in-out;
-            min-height: 300px; /* Altura mínima para uniformidad */
+            transition: transform 0.3s ease;
         }
 
-        .product:hover {
+        .card img {
+            margin-bottom: 10px;
+            width: 100%;
+            height: 40%;
+            object-fit: cover;
+        }
+
+        .card .descripcion-larga {
+            max-height: 3.4em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-height: 1.8em;
+            margin-bottom: 10px;
+        }
+
+        .card .descripcion-corta {
+            max-height: 1.4em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-height: 1.8em;
+            margin-bottom: 10px;
+        }
+
+        .card h4 {
+            max-height: 1.4em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-height: 1.8em;
+            margin-bottom: 10px;
+        }
+
+        .card button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .card button:hover {
+            background-color: #45a049;
+        }
+
+        .card:hover {
             transform: scale(1.05);
         }
 
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
+        /* Estilo para los botones de Wishlist y Carrito */
+        .card .boton-container,
+        .card .boton-container-wishlist {
+            text-align: center;
+            margin-top: -15px;
             margin-bottom: 10px;
         }
+
+        .card .boton-imagen,
+        .card .boton-imagen-wishlist {
+            width: 25px;
+            height: 25px;
+            cursor: pointer;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        .card .boton-imagen:hover,
+        .card .boton-imagen-wishlist:hover {
+            transform: scale(1.2);
+        }
+
+        .card .boton-imagen:active,
+        .card .boton-imagen-wishlist:active,
+        .card .boton-imagen.active,
+        .card .boton-imagen-wishlist.active {
+            background-color: #45a049;
+        }
+
+        .card .boton-imagen img,
+        .card .boton-imagen-wishlist img {
+            width: 100%;
+            height: 100%;
+            background-color: transparent;
+            border: none;
+            padding: 0;
+        }
+
+        /**/
 
         .buttons {
             display: flex;
@@ -97,15 +187,13 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/Fisestoplogo.png" height="40px" width="40px" alt="Logo oficial de FiesTop"
-                        title="Logo oficial de FiesTop">
-                </a>
+                <a class="navbar-brand" href="index.html"><img src="img/Fisestoplogo.png" height="40px"
+                        alt="Logo oficial de FiesTop" title="Logo oficial de FiesTop" class="nav-img"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -119,7 +207,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Categorías
+                                Categorias
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Servicios</a></li>
@@ -130,23 +218,54 @@
                                 <li><a class="dropdown-item" href="#"></a></li>
                             </ul>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Quienes somos:
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item">FiesTop es una empresa centrada en la organizacion de
+                                        eventos sociales <br> de cualquier indole desde fiestas de cumpleaños hasta
+                                        fiestas de XV años y bodas <br> el limite es su imaginación, nosotros le daremos
+                                        las herramientas necesarias <br> para que organice su fiesta ideal en tiempo y
+                                        forma</a></li>
+                                <li><a class="dropdown-item" href="#"></a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#"></a></li>
+                            </ul>
+                        </li>
+
+                        <!-- Carrito -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
+                        </li>
+
+                        <!-- Lista de deseos -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="wishlist.html">Lista de deseos</a>
+                        </li>
+
                     </ul>
+
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
-
                     <!-- Sección de inicio de sesión -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="Login.html">Iniciar sesión</a>
+                            <a class="nav-link" href="#">Iniciar sesión</a>
                         </li>
                     </ul>
 
                     <!-- Sección para ver el perfil del usuario (puedes ajustar el enlace según tus necesidades) -->
-                    <a  href="PerfilU.html">
-                        <img src="img/LogoU.png" height="40px" width="40px" alt="Logo oficial de FiesTop" title="Perfil de usuario">
+                    <a class="navbar-brand" href="#">
+                        <img src="img/LogoU.png" height="40px" alt="Logo oficial de FiesTop" title="Perfil de usuario"
+                            class="nav-img">
                     </a>
+
                 </div>
             </div>
         </nav>
@@ -171,109 +290,138 @@
             <button class="btn btn-success" onclick="applyFilters()">Aplicar filtros</button>
         </div>
 
-        <div id="product-container" class="d-flex flex-wrap justify-content-around"></div>
     </div>
 
-    <script>
-        let products = [];
+    <div id="productos-container"></div>
 
-        async function loadProducts() {
+    <script>
+        let carrito = JSON.parse(localStorage.getItem('carrito')) || [];
+        let wishlist = JSON.parse(localStorage.getItem('wishlist')) || [];
+
+        async function cargarProductos() {
             try {
                 const response = await fetch('productos_1.json');
-                const data = await response.json();
+                const productosJSON = await response.json();
 
-                // Verificar si la respuesta es un array
-                if (Array.isArray(data)) {
-                    products = data;
-                    displayProducts(products);
-                } else {
-                    console.error('La respuesta no es un array de productos.');
-                }
+                mostrarProductos(productosJSON);
             } catch (error) {
-                console.error('Error al cargar los productos:', error);
+                console.error('Error al cargar el archivo JSON:', error);
             }
         }
 
-        function displayProducts(productList) {
-            const productContainer = document.getElementById('product-container');
-            productContainer.innerHTML = '';
+        function mostrarProductos(productosJSON) {
+            var productosContainer = document.getElementById('productos-container');
 
-            productList.forEach(product => {
-                const productDiv = document.createElement('div');
-                productDiv.classList.add('product', 'card');
-                productDiv.innerHTML = `
-                    <img src="${product.imagen}" alt="${product.nombre}" class="card-img-top">
-                    <div class="card-body">
-                        <h3 class="card-title">${product.nombre}</h3>
-                        <p class="card-text">Precio: $${product.precio.toFixed(2)}</p>
-                        <p class="card-text">${product.descripcion_corta}</p>
-                        <div class="buttons">
-                            <button class="btn btn-primary" onclick="buyProduct('${product.nombre}')">Comprar</button>
-                            <button class="btn btn-secondary" onclick="viewProduct('${product.nombre}')">Ver artículo</button>
-                        </div>
-                    </div>
-                `;
-                productContainer.appendChild(productDiv);
+            productosJSON.forEach(function (producto) {
+                var card = document.createElement('div');
+                card.classList.add('card');
+
+                var enlaceImagen = document.createElement('a');
+                enlaceImagen.href = 'product.html';
+                var imagen = document.createElement('img');
+                imagen.src = producto.imagen;
+                imagen.alt = producto.nombre;
+                enlaceImagen.appendChild(imagen);
+                card.appendChild(enlaceImagen);
+
+                var contenidoTarjeta = document.createElement('div');
+                contenidoTarjeta.innerHTML = `
+                            <h4>${producto.nombre}</h4>
+                            <p class="descripcion-corta">${producto.descripcion_corta}</p>
+                            <p class="descripcion-larga">${producto.descripcion_larga}</p>
+                            <h3>$${producto.precio.toFixed(2)}</h3>
+                            <button class=""comprar onclick="comprar('${producto.nombre}')">Comprar</button>
+                            <br/><br/><br/>
+                        `;
+
+                card.appendChild(contenidoTarjeta);
+
+                /*Boton wishlist*/
+                var botonContainerWishlist = document.createElement('div');
+                botonContainerWishlist.classList.add('boton-container-wishlist');
+
+                var botonImagenWishlist = document.createElement('img');
+                botonImagenWishlist.src = 'img/wish.png';
+                botonImagenWishlist.alt = 'Agregar a lista de deseos';
+                botonImagenWishlist.classList.add('boton-imagen-wishlist');
+                botonImagenWishlist.addEventListener('click', function () {
+                    agregarListaDeDeseos(producto);
+                });
+
+                botonContainerWishlist.appendChild(botonImagenWishlist);
+
+                card.appendChild(botonContainerWishlist);
+
+                /*Boton carrito*/
+                var botonContainer = document.createElement('div');
+                botonContainer.classList.add('boton-container');
+
+                var botonImagen = document.createElement('img');
+                botonImagen.src = 'img/carrito.png';
+                botonImagen.alt = 'Agregar al carrito';
+                botonImagen.classList.add('boton-imagen');
+                botonImagen.addEventListener('click', function () {
+                    agregarAlCarrito(producto);
+                });
+
+                botonContainer.appendChild(botonImagen);
+
+                card.appendChild(botonContainer);
+
+                productosContainer.appendChild(card);
             });
         }
 
-            function applyFilters() {
-                const minPrice = parseInt(document.getElementById('minPrice').value) || 0;
-                const maxPrice = parseInt(document.getElementById('maxPrice').value) || Number.MAX_SAFE_INTEGER;
-                const sortOption = document.getElementById('sort').value;
+        function comprar(nombreProducto) {
+            alert(`Has comprado ${nombreProducto}`);
+        }
 
-                let filteredProducts = products.filter(product => product.precio >= minPrice && product.precio <= maxPrice);
+        function agregarAlCarrito(producto) {
+            const productoExistente = carrito.find(item => item.nombre === producto.nombre);
 
-                if (sortOption === 'priceLowToHigh') {
-                    filteredProducts.sort((a, b) => a.precio - b.precio);
-                } else if (sortOption === 'priceHighToLow') {
-                    filteredProducts.sort((a, b) => b.precio - a.precio);
-                } else if (sortOption === 'name') {
-                    filteredProducts.sort((a, b) => a.nombre.localeCompare(b.nombre));
-                }
-
-                displayProducts(filteredProducts);
+            if (productoExistente) {
+                productoExistente.cantidad += 1;
+                alert(`Se aumentó la cantidad de ${producto.nombre} en el carrito`);
+            } else {
+                carrito.push({ ...producto, cantidad: 1 });
+                alert(`Has agregado ${producto.nombre} al carrito`);
             }
 
-        // Cargar productos al cargar la página
-        loadProducts();
-
-        function displayProducts(productList) {
-            const productContainer = document.getElementById('product-container');
-            productContainer.innerHTML = '';
-
-            productList.forEach(product => {
-                const productDiv = document.createElement('div');
-                productDiv.classList.add('product');
-                productDiv.innerHTML = `
-                    <img src="${product.imagen}" alt="${product.nombre}">
-                    <h3>${product.nombre}</h3>
-                    <p>Precio: $${product.precio.toFixed(2)}</p>
-                    <p>${product.descripcion_corta}</p>
-                    <div class="buttons">
-                        <button onclick="buyProduct('${product.nombre}')">Comprar</button>
-                        <button onclick="viewProduct('${product.nombre}')">Ver artículo</button>
-                    </div>
-                `;
-                productContainer.appendChild(productDiv);
-            });
+            localStorage.setItem('carrito', JSON.stringify(carrito));
         }
 
-        function buyProduct(productName) {
-            alert(`¡Has comprado ${productName}!`);
-            // Puedes personalizar esta función para realizar acciones de compra específicas.
+        function agregarListaDeDeseos(producto) {
+            const productoExistente = wishlist.find(item => item.nombre === producto.nombre);
+
+            if (productoExistente) {
+                alert(`${producto.nombre} ya esta en la lista de deseos`);
+            } else {
+                wishlist.push({ ...producto, cantidad: 1 });
+                alert(`Has agregado ${producto.nombre} a la lista de deseos`);
+            }
+
+            localStorage.setItem('wishlist', JSON.stringify(wishlist));
         }
 
-        function viewProduct(productName) {
-            alert(`Viendo detalles de ${productName}`);
-            // Puedes personalizar esta función para mostrar detalles específicos del producto.
-        }
+        cargarProductos();
+        // console.log(carrito);
+        // localStorage.removeItem('carrito');
+
     </script>
+
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Z4q2kIaIIM+qJh8E+ga1aQI6q9eBX1otqjdgzmIX+6DzSHT93cUNsXMd5u7b7" crossorigin="anonymous"></script>
+        integrity="sha384-Z4q2kIaIIM+qJh8E+ga1aQI6q9eBX1otqjdgzmIX+6DzSHT93cUNsXMd5u7b7"
+        crossorigin="anonymous"></script>
+
+    <footer>
+        <p style="text-align: center;">&copy; 2023 Mi Tienda en Línea <a
+                href="https://www.facebook.com/people/FiesTop/100092594490737/"><img src="img/fb.png"
+                    class="card-img-top" alt="Plataforma oficial de fiestop en facebook" title="logo de Facebook"
+                    style="width: 30px;"></a> </p>
+
+    </footer>
 
 </body>
+
 </html>
-
-
-
