--- a/carrito.html
+++ b/carrito.html
@@ -11,8 +11,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Carrito de Compras</title>
     <style>
-        @media (max-width: 768px) {
-        }
+        @media (max-width: 768px) {}
 
         .navbar {
             position: fixed;
@@ -89,7 +88,6 @@
             margin-top: 15px;
             margin-bottom: 0;
         }
-
     </style>
 </head>
 
@@ -111,7 +109,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Todos los productos</a>
+                            <a class="nav-link" href="Catalogo.html">Todos los productos</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -190,7 +188,7 @@
     </div>
 
     <script>
-        
+
         const carrito = JSON.parse(localStorage.getItem('carrito')) || [];
 
         function mostrarCarrito() {
@@ -306,6 +304,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
+    <footer>
+        <p style="text-align: center;">&copy; 2023 Mi Tienda en Línea <a
+                href="https://www.facebook.com/people/FiesTop/100092594490737/"><img src="img/fb.png"
+                    class="card-img-top" alt="Plataforma oficial de fiestop en facebook" title="logo de Facebook"
+                    style="width: 30px;"></a> </p>
+
+    </footer>
 </body>
 
 </html>
