--- a/Catalogo.html
+++ b/Catalogo.html
@@ -181,6 +181,14 @@
         .buttons button {
             flex-grow: 1;
         }
+
+        footer {
+            background-color: #660303;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            border-top: 1px solid #e4e4e4;
+        }
     </style>
 </head>
 
