--- a/carrito.html
+++ b/carrito.html
@@ -88,6 +88,14 @@
             margin-top: 15px;
             margin-bottom: 0;
         }
+
+        footer {
+            background-color: #660303;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            border-top: 1px solid #e4e4e4;
+        }
     </style>
 </head>
 
