--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
         .product {
             border: #CCCCCC 1px solid;
         }
+
+        footer {
+            background-color: #660303;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            border-top: 1px solid #e4e4e4;
+        }
     </style>
 </head>
 
