--- a/product.html
+++ b/product.html
@@ -84,6 +84,14 @@
       border: 1px solid #ddd;
       border-radius: 5px;
     }
+
+    footer {
+            background-color: #660303;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            border-top: 1px solid #e4e4e4;
+        }
   </style>
 </head>
 
