--- a/wishlist.html
+++ b/wishlist.html
@@ -113,6 +113,14 @@
             border: none;
             padding: 0;
         }
+
+        footer {
+            background-color: #660303;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            border-top: 1px solid #e4e4e4;
+        }
     </style>
 </head>
 
